--- a/src/pages/Post/Post.css
+++ b/src/pages/Post/Post.css
@@ -73,7 +73,7 @@
 
 .post-content h1,
 .post-content h2 {
-    margin: 2em 0px 1em 0px;
+    margin: 1.4em 0px 0.8em 0px;
 }
 
 .post-content h3 {
